@@ -1,3 +1,3 @@
 EBUILD cl-kde-meta-4.4.4-r1.ebuild 3754 RMD160 8b9245fcf0c1f67d88d9799f912a5f553f192a99 SHA1 6080812bfd295059cb6e4b2cd806e1e9890f68d7 SHA256 90f66ceb566cebba86a4f45fdeda2d009048daaf3f0f263515b5c4b0e98d0525
-EBUILD cl-kde-meta-4.5.1-r2.ebuild 3921 RMD160 430d00b2b7cffd07d3b73f59753e050ee222f17f SHA1 84d918980eed9d56317ec0543a60664741f1edd8 SHA256 8891ef36e38d4c949a2062337193e3d5d67a3b182754e43e55cf4715d76c1201
+EBUILD cl-kde-meta-4.5.1-r3.ebuild 3880 RMD160 563548317ecb8dabff54ba0a20e314285551ed41 SHA1 4da7f4a1d50d881ca388cc7ae42ab2833d2cc18a SHA256 707d867b374b87a7ae520622dcad2ad79060cbb7e8a43afab154c87a0e14af75
 MISC ChangeLog 1680 RMD160 3ec3ee006dbbc65a03b842a12d5b83ac20fd8910 SHA1 12168aa31c2edf75d038ee3b961c6823bb94c91c SHA256 5e0e7cf056902a73fac6c75ddf4d1b190426d91ab44912ef431a12f1a6563333
