@@ -1,2 +1,2 @@
-EBUILD cl-nettools-meta-11.0-r4.ebuild 1097 RMD160 6acc6e3306785107b797754c2317f3b410a17e7e SHA1 085afdd0c8def51d562b476cad33c38e8bfbadde SHA256 7a603acfb5c19bba7370586101c7f18ffca4f8d7bd7e95dfe43cd5da65de762c
+EBUILD cl-nettools-meta-11.0-r5.ebuild 1107 RMD160 955d35ff7f6ecc8003edaa07797f5268a33f766b SHA1 0d4d49f98714408b29882141c0dcfb5ac185e00c SHA256 852dd342cbd5d594238f21e25cf289cbcecc7311023705cd8399746ca4b1acee
 MISC ChangeLog 1126 RMD160 7d1b847207584596148140c027f59e064b1cde5b SHA1 781fc9a7215121b7b2d18a0d925f77935c6900a7 SHA256 2f55decd6a15143b5027e598d29bc17da7589af3bee90679b0bf2939381e7bb7
