@@ -22,6 +22,7 @@ RDEPEND="
 		www-plugins/adobe-flash
 	)
 	cdistro_CLD? (
+		kde-base/kget
 		net-im/choqok
 		net-irc/konversation
 		net-p2p/eiskaltdcpp
