@@ -1,2 +1,2 @@
-EBUILD cl-tools-meta-11.0-r4.ebuild 2869 RMD160 82b5672ea7193084a804e15f995c4ba4cd17f31f SHA1 c42026bac88db76478b0554c5423f2f0fde10c6a SHA256 b443c18824bec610ea3c6d9ab4d6cc315294138843c7bc17d1ff04fa274c686f
-MISC ChangeLog 1029 RMD160 d5bedc37b3b5705a577252bce6a826b37240a03f SHA1 bae7784932fd9e97f5b36958b57eec2752e4075b SHA256 cb991bcf2b3b2c58198e6d375a378b3c97941767f16efc56b972bf6bb9369650
+EBUILD cl-tools-meta-11.0-r5.ebuild 2887 RMD160 6d1cf439e37597e0e4f46b6121f53ec8f2e32056 SHA1 6a885a300ee00d9c8e02c1648c325b341f51c615 SHA256 e3c135558565f71badcf14f4f5987918259c6e566d37ff9d2454c6f92eccecbc
+MISC ChangeLog 1189 RMD160 9f1f99d85b0b04f38f44494c23f534eddf437730 SHA1 f3a7c092f7cbb13794fc9cec4473cdf68f833c46 SHA256 704fedd2b77e6fc5880da4db4eead394ecda02516c0115e735b723a8f9d47b05
